Toolkit 7.0.1.1 - SDLCOM-5180: Use SegmentVisitor instead of directly manipulating XML

--- a/.gitignore
+++ b/.gitignore
@@ -270,3 +270,4 @@ TMX_TranslationProvider/TMX_TranslationProviderWithUITest.sln
 StarTransit/.editorconfig
 DSI Viewer/.editorconfig
 MicrosoftTranslatorProvider/.editorconfig
+Toolkit/.editorconfig
