--- a/Toolkit/SDLXLIFFSliceOrChange/SDLXLIFFSliceOrChange.csproj
+++ b/Toolkit/SDLXLIFFSliceOrChange/SDLXLIFFSliceOrChange.csproj
@@ -42,6 +42,7 @@
   <PropertyGroup>
     <AssemblyOriginatorKeyFile>SdlCommunity.snk</AssemblyOriginatorKeyFile>
     <TradosFolder>$(MSBuildProgramFiles32)\Trados\Trados Studio\Studio18</TradosFolder>
+    <LangVersion>latest</LangVersion>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="NLog">
