--- a/Post Edit Compare/Sdl.Community.PostEdit.Compare.DAL/Sdl.Community.PostEdit.Compare.DAL.csproj
+++ b/Post Edit Compare/Sdl.Community.PostEdit.Compare.DAL/Sdl.Community.PostEdit.Compare.DAL.csproj
@@ -1,6 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>net48</TargetFramework>
+    <LangVersion>latest</LangVersion>
     <OutputType>Library</OutputType>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
     <GenerateTargetFrameworkAttribute>false</GenerateTargetFrameworkAttribute>
