--- a/Post Edit Compare/Sdl.Community.PostEdit.Compare/Sdl.Community.PostEdit.Compare.csproj
+++ b/Post Edit Compare/Sdl.Community.PostEdit.Compare/Sdl.Community.PostEdit.Compare.csproj
@@ -5,6 +5,7 @@
     <IsWebBootstrapper>false</IsWebBootstrapper>
     <PublishUrl>publish\</PublishUrl>
     <Install>true</Install>
+    <LangVersion>latest</LangVersion>
     <InstallFrom>Disk</InstallFrom>
     <UpdateEnabled>false</UpdateEnabled>
     <UpdateMode>Foreground</UpdateMode>
